bindings/python/tilengine.py

'''
Tilengine - 2D Graphics library with raster effects
Copyright (c) 2015-2017 Marc Palacios Domenech (megamarc@hotmail.com)
All rights reserved.

Redistribution and use in source and binary forms, with or without modification 
are permitted provided that the following conditions are met:

1. Redistributions of source code must retain the above copyright notice, this
   list of conditions and the following disclaimer.

2. Redistributions in binary form must reproduce the above copyright notice,
   this list of conditions and the following disclaimer in the documentation 
   and/or other materials provided with the distribution.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
'''

"""
Python wrapper for Tilengine retro graphics engine
http://www.tilengine.org
"""
from ctypes import *

# constants -----------------------------------------------------------------------

# window creation flags
CWF_FULLSCREEN	= (1<<0)
CWF_VSYNC		= (1<<1)
CWF_S1			= (1<<2)
CWF_S2			= (2<<2)
CWF_S3			= (3<<2)
CWF_S4			= (4<<2)
CWF_S5			= (5<<2)

# tile/sprite flags
FLAG_FLIPX		= (1<<15)	# horizontal flip
FLAG_FLIPY		= (1<<14)	# vertical flip
FLAG_ROTATE		= (1<<13)	# row/column flip (unsupported, Tiled compatibility)
FLAG_PRIORITY	= (1<<12)	# tile goes in front of sprite layer

# Error codes
ERR_OK 				= 0	 	# No error 
ERR_OUT_OF_MEMORY 	= 1	 	# Not enough memory 
ERR_IDX_LAYER 		= 2	 	# Layer index out of range 
ERR_IDX_SPRITE 		= 3	 	# Sprite index out of range 
ERR_IDX_ANIMATION 	= 4	 	# Animation index out of range 
ERR_IDX_PICTURE 	= 5	 	# Picture or tile index out of range 
ERR_REF_TILESET 	= 6	 	# Invalid Tileset reference 
ERR_REF_TILEMAP 	= 7	 	# Invalid Tilemap reference 
ERR_REF_SPRITESET 	= 8	 	# Invalid Spriteset reference 
ERR_REF_PALETTE 	= 9	 	# Invalid Palette reference 
ERR_REF_SEQUENCE 	= 10 	# Invalid SequencePack reference 
ERR_REF_SEQPACK 	= 11 	# Invalid Sequence reference 
ERR_REF_BITMAP 		= 12 	# Invalid Bitmap reference 
ERR_NULL_POINTER 	= 13 	# Null pointer as argument  
ERR_FILE_NOT_FOUND 	= 14 	# Resource file not found 
ERR_WRONG_FORMAT 	= 15 	# Resource file has invalid format 
ERR_WRONG_SIZE 		= 16 	# A width or height parameter is invalid 
ERR_UNSUPPORTED		= 17 	# Unsupported function

# blend modes
BLEND_NONE		= 0
BLEND_MIX25		= 1
BLEND_MIX50		= 2
BLEND_MIX75		= 3
BLEND_ADD		= 4
BLEND_SUB		= 5
BLEND_MOD		= 6
BLEND_CUSTOM	= 7
MAX_BLEND		= 8
BLEND_MIX		= BLEND_MIX50

# inputs
INPUT_NONE 		= 0
INPUT_UP 		= 1
INPUT_DOWN 		= 2
INPUT_LEFT 		= 3
INPUT_RIGHT		= 4
INPUT_A 		= 5
INPUT_B 		= 6
INPUT_C 		= 7
INPUT_D 		= 8

# CRT overlay patterns
OVERLAY_NONE		= 0
OVERLAY_SHADOWMASK	= 1
OVERLAY_APERTURE	= 2
OVERLAY_CUSTOM		= 3

# structures ------------------------------------------------------------------
class Affine(Structure):
	_fields_ = [
		("angle", c_float),
		("dx", c_float),
		("dy", c_float),
		("sx", c_float),
		("sy", c_float)
	]
	
class Tile(Structure):
	_fields_ = [
		("index", c_ushort),
		("flags", c_ushort)
	]

class ColorStrip(Structure):
	_fields_ = [
		("delay", c_int),
		("first", c_ubyte),
		("count", c_ubyte),
		("dir", c_ubyte)
	]

class SpriteInfo(Structure):
	_fields_ = [
		("offset", c_int),
		("w", c_int),
		("h", c_int)
	]

class TileInfo(Structure):
	_fields_ = [
		("index", c_ushort),
		("flags", c_ushort),
		("row", c_int),
		("col", c_int),
		("xoffset", c_int),
		("yoffset", c_int),
		("color", c_ubyte)
	]
	
class Rect(Structure):
	_fields_ = [
		("x", c_int),
		("y", c_int),
		("w", c_int),
		("h", c_int)
	]
	
class PixelMap(Structure):
	_fields_ = [
		("dx", c_short),
		("dy", c_short)
	]
	
# load native library
from sys import platform as _platform
if _platform == "linux" or _platform == "linux2":
	_tln = cdll.LoadLibrary("libTilengine.so")
elif _platform == "win32":
	_tln = cdll.LoadLibrary("Tilengine.dll")
elif _platform == "darwin":
	_tln = cdll.LoadLibrary("Tilengine.dylib")
	
# callback types for user functions
RasterCallbackFunc = CFUNCTYPE(None, c_int)
CustomBlendFunc = CFUNCTYPE(c_ubyte, c_ubyte, c_ubyte)

# return c_char_p compatible string
def _encode_string(string):
	if string != None:
		return string.encode()
	else:
		return None
		
# global arrays holding references to indexed entities
layers 		= None
sprites 	= None
animations  = None

# basic management ------------------------------------------------------------
_tln.TLN_Init.argtypes = [c_int, c_int, c_int, c_int, c_int]
_tln.TLN_Init.restype = c_bool
_tln.TLN_GetNumObjects.restype = c_int
_tln.TLN_GetVersion.restype = c_int
_tln.TLN_GetUsedMemory.restype = c_int
_tln.TLN_GetNumLayers.restype = c_int
_tln.TLN_GetNumSprites.restype = c_int
_tln.TLN_SetBGColor.argtypes = [c_ubyte, c_ubyte, c_ubyte]
_tln.TLN_SetBGBitmap.argtypes = [c_void_p]
_tln.TLN_SetBGBitmap.restype = c_bool
_tln.TLN_SetBGPalette.argtypes = [c_void_p]
_tln.TLN_SetBGPalette.restype = c_bool
_tln.TLN_SetRenderTarget.argtypes = [c_void_p, c_int]
_tln.TLN_UpdateFrame.argtypes = [c_int]
_tln.TLN_BeginFrame.argtypes = [c_int]
_tln.TLN_DrawNextScanline.restype = c_bool
_tln.TLN_SetLoadPath.argtypes = [c_char_p]

def Init(width, height, num_layers, num_sprites, num_animations):
	ok = _tln.TLN_Init(width, height, num_layers, num_sprites, num_animations)
	if ok == True:
		global layers
		layers = [Layer(n) for n in range(num_layers)]
		global sprites
		sprites = [Sprite(n) for n in range(num_sprites)]
		global animations
		animations = [Animation(n) for n in range(num_animations)]
	return ok
		
def Deinit():
	_tln.TLN_Deinit()
	
def GetNumObjects():
	return _tln.TLN_GetNumObjects()
	
def GetVersion():
	return _tln.TLN_GetVersion()

def GetUsedMemory():
	return _tln.TLN_GetUsedMemory()
	
def GetNumLayers():
	return _tln.TLN_GetNumLayers()

def GetNumSprites():
	return _tln.TLN_GetNumSprites()

def SetBGColor(r, g, b):
	_tln.TLN_SetBGColor(r, g, b)

def SetBGBitmap():
	return _tln.TLN_SetBGBitmap(bitmap)

def SetBGPalette(palette):
	return _tln.TLN_SetBGPalette(palette)

def SetRasterCallback(raster_callback):
	_tln.TLN_SetRasterCallback(raster_callback)

def SetRenderTarget(pixels, pitch):
	_tln.TLN_SetRenderTarget(pixels, pitch)

def UpdateFrame(num_frame=0):
	_tln.TLN_UpdateFrame(num_frame)

def BeginFrame(num_frame=0):
	_tln.TLN_BeginFrame(num_frame)

def DrawNextScanline():
	return _tln.TLN_DrawNextScanline()

def SetLoadPath(path):
	_tln.TLN_SetLoadPath(_encode_string(path))

def SetCustomBlendFunction(blend_function):
	_tln.TLN_SetCustomBlendFunction(blend_function)
	
# error handling --------------------------------------------------------------
_tln.TLN_GetLastError.restype = c_int
_tln.TLN_GetErrorString.argtypes = [c_int]
_tln.TLN_GetErrorString.restype = c_char_p

def GetLastError():
	return _tln.TLN_GetLastError()

def GetErrorString(num_error):
	return _tln.TLN_GetErrorString(num_error).decode()

# window management -----------------------------------------------------------
_tln.TLN_CreateWindow.argtypes = [c_char_p, c_int]
_tln.TLN_CreateWindow.restype = c_bool
_tln.TLN_CreateWindowThread.argtypes = [c_char_p, c_int]
_tln.TLN_CreateWindowThread.restype = c_bool
_tln.TLN_ProcessWindow.restype = c_bool
_tln.TLN_IsWindowActive.restype = c_bool
_tln.TLN_GetInput.argtypes = [c_int]
_tln.TLN_GetInput.restype = c_bool
_tln.TLN_DrawFrame.argtypes = [c_int]
_tln.TLN_EnableCRTEffect.argtypes = [c_int, c_ubyte, c_ubyte, c_ubyte, c_ubyte, c_ubyte, c_ubyte, c_bool, c_ubyte]
_tln.TLN_GetTicks.restype = c_int
_tln.TLN_Delay.argtypes = [c_int]
_tln.TLN_BeginWindowFrame.argtypes = [c_int]

def CreateWindow(overlay, flags):
	ok = _tln.TLN_CreateWindow(_encode_string(overlay), flags)
	if ok == True:
		return Window()
	else:
		return None

def CreateWindowThread(overlay, flags):
	ok = _tln.TLN_CreateWindowThread(_encode_string(overlay), flags)
	if ok == True:
		return Window()
	else:
		return None

class Window:
	def Process(self):
		return _tln.TLN_ProcessWindow()

	def IsActive(self):
		return _tln.TLN_IsWindowActive()
		
	def GetInput(self, input_id):
		return _tln.TLN_GetInput(input_id)

	def DrawFrame(self, num_frame=0):
		_tln.TLN_DrawFrame (num_frame)

	def WaitRedraw(self):
		_tln.TLN_WaitRedraw()

	def EnableCRTEffect(self, overlay_id, overlay_blend, threshold, v0, v1, v2, v3, blur, glow_factor):
		_tln.TLN_EnableCRTEffect(overlay_id, overlay_blend, threshold, v0, v1, v2, v3, blur, glow_factor)

	def DisableCRTEffect(self):
		_tln.TLN_DisableCRTEffect()

	def GetTicks(self):
		return _tln.TLN_GetTicks()

	def Delay(self, msecs):
		_tln.TLN_Delay(msecs)

	def BeginFrame(self, num_frame):
		_tln.TLN_BeginWindowFrame(num_frame)

	def EndFrame(self):
		_tln.TLN_EndWindowFrame()
	
# spritesets management -----------------------------------------------------------
_tln.TLN_CreateSpriteset.argtypes = [c_int, POINTER(Rect), c_void_p, c_int, c_int, c_int, c_void_p]
_tln.TLN_CreateSpriteset.restype = c_void_p
_tln.TLN_LoadSpriteset.argtypes = [c_char_p]
_tln.TLN_LoadSpriteset.restype = c_void_p
_tln.TLN_CloneSpriteset.argtypes = [c_void_p]
_tln.TLN_CloneSpriteset.restype = c_void_p
_tln.TLN_GetSpriteInfo.argtypes = [c_void_p, c_int, c_void_p]
_tln.TLN_GetSpriteInfo.restype = c_bool
_tln.TLN_GetSpritesetPalette.argtypes = [c_void_p]
_tln.TLN_GetSpritesetPalette.restype = c_void_p
_tln.TLN_DeleteSpriteset.argtypes = [c_void_p]
_tln.TLN_DeleteSpriteset.restype = c_bool

def CreateSpriteset(entries, rects, data, width, height, pitch, palette):
	handle = _tln.TLN_CreateSpriteset(entries, rects, data, width, height, pitch, palette)
	if handle != None:
		return Spriteset(handle)
	else:
		return None

def LoadSpriteset(filename):
	handle = _tln.TLN_LoadSpriteset(_encode_string(filename))
	if handle != None:
		return Spriteset(handle)
	else:
		return None
		
class Spriteset:
	def __init__(self, handle):
		self._as_parameter_ = handle
		self.palette = Palette(_tln.TLN_GetSpritesetPalette(handle))
	
	def Clone(self):
		handle = _tln.TLN_CloneSpriteset(self)
		if handle != None:
			return Spriteset(handle)
		else:
			return None

	def GetSpriteInfo(self, entry, info):
		return _tln.TLN_GetSpriteInfo(self, entry, info) 
		
	def Delete(self):
		return _tln.TLN_DeleteSpriteset(self)

# tilesets management ---------------------------------------------------------
_tln.TLN_CreateTileset.argtypes = [c_int, c_int, c_int, c_void_p]
_tln.TLN_CreateTileset.restype = c_void_p
_tln.TLN_LoadTileset.argtypes = [c_char_p]
_tln.TLN_LoadTileset.restype = c_void_p
_tln.TLN_CloneTileset.argtypes = [c_void_p]
_tln.TLN_CloneTileset.restype = c_void_p
_tln.TLN_SetTilesetPixels.argtypes = [c_void_p, c_int, c_void_p, c_int]
_tln.TLN_SetTilesetPixels.restype = c_bool
_tln.TLN_CopyTile.argtypes = [c_void_p, c_int, c_int]
_tln.TLN_CopyTile.restype = c_bool
_tln.TLN_GetTileWidth.argtypes = [c_void_p]
_tln.TLN_GetTileWidth.restype = c_int
_tln.TLN_GetTileHeight.argtypes = [c_void_p]
_tln.TLN_GetTileHeight.restype = c_int
_tln.TLN_GetTilesetPalette.argtypes = [c_void_p]
_tln.TLN_GetTilesetPalette.restype = c_void_p
_tln.TLN_DeleteTileset.argtypes = [c_void_p]
_tln.TLN_DeleteTileset.restype = c_bool

def CreateTileset(num_tiles, width, height, palette):
	handle = _tln.TLN_CreateTileset(num_tiles, width, height, palette)
	if handle != None:
		return Tileset(handle)
	else:
		return None
